--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,29 @@
     transform: rotate(360deg);
   }
 }
+
+#map {
+  margin: 0; 
+  height: 100vh;
+  width: 100vw;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#sidebar {
+  position: absolute;
+  z-index: 100;
+  box-shadow: 0px 1px 1px grey;
+  background: #f2f2f2;
+  width: 325px;
+  max-width: 100%;
+  height: calc(100vh - 60px);
+  overflow-y: scroll;
+}
+
+#sidebar-inner {
+  padding: 10px;
+}
